# peercoin

./: .appveyor.yml  .cirrus.yml  .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  COPYING  Create FONDING.yml  INSTALL  License.md  Makefile.am  README.md  SECURITY.md  archive.sh  bitcoin-qt.pro  compile_commands.json  configure.ac  peercoin  peershares.pro  sonar-project.properties
.github/: ISSUE_TEMPLATE.md  stale.yml
.travis/: lint_06_script.sh
.tx/: config
MSVC2013/: MSVC2013.sln  UpgradeLog.htm
build_msvc/: bitcoin_config.h  libsecp256k1_config.h
contrib/: README.md  filter-lcov.py  gitian-build.py  peercoin-cli.bash-completion  peercoind.bash-completion
depends/: Makefile  README.md  funcs.mk
doc/: Development_process.md  Doxyfile  Doxyfile.in  README  README.md  README_windows.txt  REST-interface.md  assets-attribution.txt  benchmarking.md  build-netbsd.md  build-openbsd.md  build-osx-brew-mavericks.txt  build-osx-brew.txt  build-osx-mavericks.txt  build-osx-ports-mavericks.txt  build-osx-ports.txt  build-osx.md  build-osx.txt  build-unix.md  build-unix.txt  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  files.md  fuzzing.md  init.md  readme-qt.rst  reduce-traffic.md  release-notes.md  release-process.md  release-process.txt  shared-libraries.md  tor.md  tracing.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  bitcoin-tx.1  peercoin-cli.1  peercoin-qt.1  peercoin-tx.1  peercoin-util.1  peercoin-wallet.1  peercoind.1
js/: contact_me_static.js  freelancer.js
share/: setup.nsi  (+2 more)
(+924 files in other folders)
